# FPYDiploma_backend

./: .gitignore  README.md  pyproject.toml  requests.http
README/: deployment_server.md  structure.md
config/: settings.py  urls.py
src/cloud/: apps.py  models.py  permisions.py  serializers.py  views.py
src/cloud/migrations/: 0001_initial.py
